[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sounds/shoot.ogg" type="AudioStream" id=1]
[ext_resource path="res://scripts/TankController.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/explosion.ogg" type="AudioStream" id=3]
[ext_resource path="res://scenes/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/tank.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Flash"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Gun/Flash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gun/Flash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.03, 0.08 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Init"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Gun/Flash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Gun/Flash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gun/Flash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}

[node name="Tank" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Hull" type="Sprite" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Gun" type="Sprite" parent="."]

[node name="FirePosition" type="Position2D" parent="Gun"]

[node name="Flash" type="Sprite" parent="Gun"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.5, 0.5 )
offset = Vector2( 25, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Cooldown" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 1 )
anims/Init = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Explosion" parent="." instance=ExtResource( 4 )]
visible = false
scale = Vector2( 1.5, 1.5 )

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = -30.0

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="TankDrive" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -25.0

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
[connection signal="finished" from="ExplosionSound" to="." method="_on_ExplosionSound_finished"]
